compil_devouard1u/src/compil/LoocParser.java
package compil;

// $ANTLR 3.3 Nov 30, 2010 12:50:56 grammar/Looc.g 2017-03-26 22:12:43

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class LoocParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROG", "CLASSDEF", "INHERIT", "CLASSBODY", "METHODBODY", "FORBODY", "VARDEF", "METHODDEF", "ARGS", "RETURN", "AFFECT", "IF", "THEN", "ELSE", "FOR", "INSTRUCTIONS", "DO", "WRITE", "READ", "NEW", "MINUS", "IDF_CLASS", "IDF", "CSTE_ENT", "CSTE_CHAINE", "SUB", "MUL", "ADD", "EQ", "NEQ", "LT", "GT", "LE", "GE", "CSTE_COMM", "WS", "'class'", "'inherit'", "'='", "'('", "')'", "'var'", "':'", "';'", "'int'", "'string'", "'method'", "'{'", "'}'", "','", "':='", "'if'", "'then'", "'else'", "'fi'", "'for'", "'in'", "'..'", "'do'", "'end'", "'nil'", "'write'", "'read'", "'return'", "'.'", "'this'", "'super'", "'new'"
    };
    public static final int EOF=-1;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int PROG=4;
    public static final int CLASSDEF=5;
    public static final int INHERIT=6;
    public static final int CLASSBODY=7;
    public static final int METHODBODY=8;
    public static final int FORBODY=9;
    public static final int VARDEF=10;
    public static final int METHODDEF=11;
    public static final int ARGS=12;
    public static final int RETURN=13;
    public static final int AFFECT=14;
    public static final int IF=15;
    public static final int THEN=16;
    public static final int ELSE=17;
    public static final int FOR=18;
    public static final int INSTRUCTIONS=19;
    public static final int DO=20;
    public static final int WRITE=21;
    public static final int READ=22;
    public static final int NEW=23;
    public static final int MINUS=24;
    public static final int IDF_CLASS=25;
    public static final int IDF=26;
    public static final int CSTE_ENT=27;
    public static final int CSTE_CHAINE=28;
    public static final int SUB=29;
    public static final int MUL=30;
    public static final int ADD=31;
    public static final int EQ=32;
    public static final int NEQ=33;
    public static final int LT=34;
    public static final int GT=35;
    public static final int LE=36;
    public static final int GE=37;
    public static final int CSTE_COMM=38;
    public static final int WS=39;

    // delegates
    // delegators


        public LoocParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LoocParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LoocParser.tokenNames; }
    public String getGrammarFileName() { return "grammar/Looc.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // grammar/Looc.g:32:1: prog : ( class_decl )* ( var_decl )* ( instruction )+ -> ^( PROG ( class_decl )* ( var_decl )* ( instruction )+ ) ;
    public final LoocParser.prog_return prog() throws RecognitionException {
        LoocParser.prog_return retval = new LoocParser.prog_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        LoocParser.class_decl_return class_decl1 = null;

        LoocParser.var_decl_return var_decl2 = null;

        LoocParser.instruction_return instruction3 = null;


        RewriteRuleSubtreeStream stream_instruction=new RewriteRuleSubtreeStream(adaptor,"rule instruction");
        RewriteRuleSubtreeStream stream_class_decl=new RewriteRuleSubtreeStream(adaptor,"rule class_decl");
        RewriteRuleSubtreeStream stream_var_decl=new RewriteRuleSubtreeStream(adaptor,"rule var_decl");
        try {
            // grammar/Looc.g:32:5: ( ( class_decl )* ( var_decl )* ( instruction )+ -> ^( PROG ( class_decl )* ( var_decl )* ( instruction )+ ) )
            // grammar/Looc.g:32:20: ( class_decl )* ( var_decl )* ( instruction )+
            {
            // grammar/Looc.g:32:20: ( class_decl )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==40) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // grammar/Looc.g:32:20: class_decl
            	    {
            	    pushFollow(FOLLOW_class_decl_in_prog135);
            	    class_decl1=class_decl();

            	    state._fsp--;

            	    stream_class_decl.add(class_decl1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // grammar/Looc.g:32:32: ( var_decl )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==45) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // grammar/Looc.g:32:32: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_prog138);
            	    var_decl2=var_decl();

            	    state._fsp--;

            	    stream_var_decl.add(var_decl2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // grammar/Looc.g:32:42: ( instruction )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==IDF||LA3_0==51||LA3_0==55||LA3_0==59||LA3_0==62||(LA3_0>=65 && LA3_0<=67)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // grammar/Looc.g:32:42: instruction
            	    {
            	    pushFollow(FOLLOW_instruction_in_prog141);
            	    instruction3=instruction();

            	    state._fsp--;

            	    stream_instruction.add(instruction3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);



            // AST REWRITE
            // elements: class_decl, instruction, var_decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 32:55: -> ^( PROG ( class_decl )* ( var_decl )* ( instruction )+ )
            {
                // grammar/Looc.g:32:58: ^( PROG ( class_decl )* ( var_decl )* ( instruction )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROG, "PROG"), root_1);

                // grammar/Looc.g:32:65: ( class_decl )*
                while ( stream_class_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_class_decl.nextTree());

                }
                stream_class_decl.reset();
                // grammar/Looc.g:32:77: ( var_decl )*
                while ( stream_var_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_var_decl.nextTree());

                }
                stream_var_decl.reset();
                if ( !(stream_instruction.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_instruction.hasNext() ) {
                    adaptor.addChild(root_1, stream_instruction.nextTree());

                }
                stream_instruction.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class class_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_decl"
    // grammar/Looc.g:34:1: class_decl : 'class' IDF_CLASS ( 'inherit' IDF_CLASS )? '=' '(' class_item_decl ')' -> ^( CLASSDEF IDF_CLASS ( ^( INHERIT IDF_CLASS ) )? class_item_decl ) ;
    public final LoocParser.class_decl_return class_decl() throws RecognitionException {
        LoocParser.class_decl_return retval = new LoocParser.class_decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal4=null;
        Token IDF_CLASS5=null;
        Token string_literal6=null;
        Token IDF_CLASS7=null;
        Token char_literal8=null;
        Token char_literal9=null;
        Token char_literal11=null;
        LoocParser.class_item_decl_return class_item_decl10 = null;


        Object string_literal4_tree=null;
        Object IDF_CLASS5_tree=null;
        Object string_literal6_tree=null;
        Object IDF_CLASS7_tree=null;
        Object char_literal8_tree=null;
        Object char_literal9_tree=null;
        Object char_literal11_tree=null;
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_IDF_CLASS=new RewriteRuleTokenStream(adaptor,"token IDF_CLASS");
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleSubtreeStream stream_class_item_decl=new RewriteRuleSubtreeStream(adaptor,"rule class_item_decl");
        try {
            // grammar/Looc.g:34:11: ( 'class' IDF_CLASS ( 'inherit' IDF_CLASS )? '=' '(' class_item_decl ')' -> ^( CLASSDEF IDF_CLASS ( ^( INHERIT IDF_CLASS ) )? class_item_decl ) )
            // grammar/Looc.g:34:20: 'class' IDF_CLASS ( 'inherit' IDF_CLASS )? '=' '(' class_item_decl ')'
            {
            string_literal4=(Token)match(input,40,FOLLOW_40_in_class_decl171);  
            stream_40.add(string_literal4);

            IDF_CLASS5=(Token)match(input,IDF_CLASS,FOLLOW_IDF_CLASS_in_class_decl173);  
            stream_IDF_CLASS.add(IDF_CLASS5);

            // grammar/Looc.g:34:38: ( 'inherit' IDF_CLASS )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==41) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // grammar/Looc.g:34:40: 'inherit' IDF_CLASS
                    {
                    string_literal6=(Token)match(input,41,FOLLOW_41_in_class_decl177);  
                    stream_41.add(string_literal6);

                    IDF_CLASS7=(Token)match(input,IDF_CLASS,FOLLOW_IDF_CLASS_in_class_decl179);  
                    stream_IDF_CLASS.add(IDF_CLASS7);


                    }
                    break;

            }

            char_literal8=(Token)match(input,42,FOLLOW_42_in_class_decl184);  
            stream_42.add(char_literal8);

            char_literal9=(Token)match(input,43,FOLLOW_43_in_class_decl186);  
            stream_43.add(char_literal9);

            pushFollow(FOLLOW_class_item_decl_in_class_decl188);
            class_item_decl10=class_item_decl();

            state._fsp--;

            stream_class_item_decl.add(class_item_decl10.getTree());
            char_literal11=(Token)match(input,44,FOLLOW_44_in_class_decl190);  
            stream_44.add(char_literal11);



            // AST REWRITE
            // elements: IDF_CLASS, IDF_CLASS, class_item_decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 34:91: -> ^( CLASSDEF IDF_CLASS ( ^( INHERIT IDF_CLASS ) )? class_item_decl )
            {
                // grammar/Looc.g:34:94: ^( CLASSDEF IDF_CLASS ( ^( INHERIT IDF_CLASS ) )? class_item_decl )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLASSDEF, "CLASSDEF"), root_1);

                adaptor.addChild(root_1, stream_IDF_CLASS.nextNode());
                // grammar/Looc.g:34:115: ( ^( INHERIT IDF_CLASS ) )?
                if ( stream_IDF_CLASS.hasNext() ) {
                    // grammar/Looc.g:34:115: ^( INHERIT IDF_CLASS )
                    {
                    Object root_2 = (Object)adaptor.nil();
                    root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(INHERIT, "INHERIT"), root_2);

                    adaptor.addChild(root_2, stream_IDF_CLASS.nextNode());

                    adaptor.addChild(root_1, root_2);
                    }

                }
                stream_IDF_CLASS.reset();
                adaptor.addChild(root_1, stream_class_item_decl.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "class_decl"

    public static class class_item_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_item_decl"
    // grammar/Looc.g:36:1: class_item_decl : ( var_decl )* ( method_decl )* -> ^( CLASSBODY ( var_decl )* ( method_decl )* ) ;
    public final LoocParser.class_item_decl_return class_item_decl() throws RecognitionException {
        LoocParser.class_item_decl_return retval = new LoocParser.class_item_decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        LoocParser.var_decl_return var_decl12 = null;

        LoocParser.method_decl_return method_decl13 = null;


        RewriteRuleSubtreeStream stream_method_decl=new RewriteRuleSubtreeStream(adaptor,"rule method_decl");
        RewriteRuleSubtreeStream stream_var_decl=new RewriteRuleSubtreeStream(adaptor,"rule var_decl");
        try {
            // grammar/Looc.g:36:16: ( ( var_decl )* ( method_decl )* -> ^( CLASSBODY ( var_decl )* ( method_decl )* ) )
            // grammar/Looc.g:36:20: ( var_decl )* ( method_decl )*
            {
            // grammar/Looc.g:36:20: ( var_decl )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==45) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // grammar/Looc.g:36:20: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_class_item_decl218);
            	    var_decl12=var_decl();

            	    state._fsp--;

            	    stream_var_decl.add(var_decl12.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // grammar/Looc.g:36:30: ( method_decl )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==50) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // grammar/Looc.g:36:30: method_decl
            	    {
            	    pushFollow(FOLLOW_method_decl_in_class_item_decl221);
            	    method_decl13=method_decl();

            	    state._fsp--;

            	    stream_method_decl.add(method_decl13.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);



            // AST REWRITE
            // elements: method_decl, var_decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 36:43: -> ^( CLASSBODY ( var_decl )* ( method_decl )* )
            {
                // grammar/Looc.g:36:46: ^( CLASSBODY ( var_decl )* ( method_decl )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLASSBODY, "CLASSBODY"), root_1);

                // grammar/Looc.g:36:58: ( var_decl )*
                while ( stream_var_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_var_decl.nextTree());

                }
                stream_var_decl.reset();
                // grammar/Looc.g:36:68: ( method_decl )*
                while ( stream_method_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_method_decl.nextTree());

                }
                stream_method_decl.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "class_item_decl"

    public static class var_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl"
    // grammar/Looc.g:38:1: var_decl : 'var' IDF ':' type ';' -> ^( VARDEF IDF type ) ;
    public final LoocParser.var_decl_return var_decl() throws RecognitionException {
        LoocParser.var_decl_return retval = new LoocParser.var_decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal14=null;
        Token IDF15=null;
        Token char_literal16=null;
        Token char_literal18=null;
        LoocParser.type_return type17 = null;


        Object string_literal14_tree=null;
        Object IDF15_tree=null;
        Object char_literal16_tree=null;
        Object char_literal18_tree=null;
        RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // grammar/Looc.g:38:9: ( 'var' IDF ':' type ';' -> ^( VARDEF IDF type ) )
            // grammar/Looc.g:38:20: 'var' IDF ':' type ';'
            {
            string_literal14=(Token)match(input,45,FOLLOW_45_in_var_decl250);  
            stream_45.add(string_literal14);

            IDF15=(Token)match(input,IDF,FOLLOW_IDF_in_var_decl252);  
            stream_IDF.add(IDF15);

            char_literal16=(Token)match(input,46,FOLLOW_46_in_var_decl254);  
            stream_46.add(char_literal16);

            pushFollow(FOLLOW_type_in_var_decl256);
            type17=type();

            state._fsp--;

            stream_type.add(type17.getTree());
            char_literal18=(Token)match(input,47,FOLLOW_47_in_var_decl258);  
            stream_47.add(char_literal18);



            // AST REWRITE
            // elements: IDF, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 38:43: -> ^( VARDEF IDF type )
            {
                // grammar/Looc.g:38:46: ^( VARDEF IDF type )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VARDEF, "VARDEF"), root_1);

                adaptor.addChild(root_1, stream_IDF.nextNode());
                adaptor.addChild(root_1, stream_type.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decl"

    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // grammar/Looc.g:40:1: type : ( IDF_CLASS | 'int' | 'string' );
    public final LoocParser.type_return type() throws RecognitionException {
        LoocParser.type_return retval = new LoocParser.type_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set19=null;

        Object set19_tree=null;

        try {
            // grammar/Looc.g:40:5: ( IDF_CLASS | 'int' | 'string' )
            // grammar/Looc.g:
            {
            root_0 = (Object)adaptor.nil();

            set19=(Token)input.LT(1);
            if ( input.LA(1)==IDF_CLASS||(input.LA(1)>=48 && input.LA(1)<=49) ) {
                input.consume();
                adaptor.addChild(root_0, (Object)adaptor.create(set19));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"

    public static class method_decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_decl"
    // grammar/Looc.g:45:1: method_decl : 'method' IDF '(' ( method_args )? ')' method_decl_suite -> ^( METHODDEF IDF ( method_args )? method_decl_suite ) ;
    public final LoocParser.method_decl_return method_decl() throws RecognitionException {
        LoocParser.method_decl_return retval = new LoocParser.method_decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal20=null;
        Token IDF21=null;
        Token char_literal22=null;
        Token char_literal24=null;
        LoocParser.method_args_return method_args23 = null;

        LoocParser.method_decl_suite_return method_decl_suite25 = null;


        Object string_literal20_tree=null;
        Object IDF21_tree=null;
        Object char_literal22_tree=null;
        Object char_literal24_tree=null;
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
        RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleSubtreeStream stream_method_decl_suite=new RewriteRuleSubtreeStream(adaptor,"rule method_decl_suite");
        RewriteRuleSubtreeStream stream_method_args=new RewriteRuleSubtreeStream(adaptor,"rule method_args");
        try {
            // grammar/Looc.g:45:12: ( 'method' IDF '(' ( method_args )? ')' method_decl_suite -> ^( METHODDEF IDF ( method_args )? method_decl_suite ) )
            // grammar/Looc.g:45:15: 'method' IDF '(' ( method_args )? ')' method_decl_suite
            {
            string_literal20=(Token)match(input,50,FOLLOW_50_in_method_decl333);  
            stream_50.add(string_literal20);

            IDF21=(Token)match(input,IDF,FOLLOW_IDF_in_method_decl335);  
            stream_IDF.add(IDF21);

            char_literal22=(Token)match(input,43,FOLLOW_43_in_method_decl337);  
            stream_43.add(char_literal22);

            // grammar/Looc.g:45:32: ( method_args )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==IDF) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // grammar/Looc.g:45:32: method_args
                    {
                    pushFollow(FOLLOW_method_args_in_method_decl339);
                    method_args23=method_args();

                    state._fsp--;

                    stream_method_args.add(method_args23.getTree());

                    }
                    break;

            }

            char_literal24=(Token)match(input,44,FOLLOW_44_in_method_decl342);  
            stream_44.add(char_literal24);

            pushFollow(FOLLOW_method_decl_suite_in_method_decl344);
            method_decl_suite25=method_decl_suite();

            state._fsp--;

            stream_method_decl_suite.add(method_decl_suite25.getTree());


            // AST REWRITE
            // elements: method_args, IDF, method_decl_suite
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 45:67: -> ^( METHODDEF IDF ( method_args )? method_decl_suite )
            {
                // grammar/Looc.g:45:70: ^( METHODDEF IDF ( method_args )? method_decl_suite )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(METHODDEF, "METHODDEF"), root_1);

                adaptor.addChild(root_1, stream_IDF.nextNode());
                // grammar/Looc.g:45:86: ( method_args )?
                if ( stream_method_args.hasNext() ) {
                    adaptor.addChild(root_1, stream_method_args.nextTree());

                }
                stream_method_args.reset();
                adaptor.addChild(root_1, stream_method_decl_suite.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "method_decl"

    public static class method_decl_suite_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "method_decl_suite"
    // grammar/Looc.g:47:1: method_decl_suite : ( ':' type )? '{' ( var_decl )* ( instruction )+ '}' -> ( ^( RETURN type ) )? ^( METHODBODY ( var_decl )* ( instruction )+ ) ;
    public final LoocParser.method_decl_suite_return method_decl_suite() throws RecognitionException {
        LoocParser.method_decl_suite_return retval = new LoocParser.method_decl_suite_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal26=null;
        Token char_literal28=null;
        Token char_literal31=null;
        LoocParser.type_return type27 = null;

        LoocParser.var_decl_return var_decl29 = null;

        LoocParser.instruction_return instruction30 = null;

